Whitespace fix, restored .discussion-timeline width

--- a/ext/content/inject.css
+++ b/ext/content/inject.css
@@ -11,29 +11,33 @@
     .container {
         width: 1280px !important;
     }
-	
+    
     .repository-with-sidebar .repository-content {
         width: 1220px !important;
     }
-	
+    
     .repository-with-sidebar.with-full-navigation .repository-content {
         width: 1090px !important;
     }
-	
+      
     .content .css-truncate.css-truncate-target {
         max-width: 500px !important;
     }
-	
+    
     .org-main {
         width: 940px !important;
     }
-	
+    
     .column-main {
         width: 1020px !important;
     }
-	
+    
     .pull-request-composer .discussion-topic {
         width: 1032px !important;	
+    }
+    
+    .discussion-timeline {
+        width: 1060px !important;
     }
 }
 
@@ -49,11 +53,11 @@
     .repository-with-sidebar.with-full-navigation .repository-content {
         width: 1290px !important;
     }
-
+    
     .content .css-truncate.css-truncate-target {
         max-width: 700px !important;
     }
-	
+    
     .org-main {
         width: 1140px !important;
     }
@@ -61,13 +65,11 @@
     .column-main {
         width: 1220px !important;
     }
-	
+    
     .pull-request-composer .discussion-topic {
         width: 1232px !important;	
     }
-	
-    // Specific for 1600px breakpoint
-	
+    
     .discussion-timeline {
         width: 1260px !important;
     }
@@ -89,7 +91,7 @@
     .content .css-truncate.css-truncate-target {
         max-width: 900px !important;
     }
-	
+    
     .org-main {
         width: 1340px !important;
     }
@@ -97,13 +99,11 @@
     .column-main {
         width: 1420px !important;
     }
-	
+    
     .pull-request-composer .discussion-topic {
         width: 1432px !important;	
     }
-	
-    // Specific for 1800px breakpoint
-	
+        
     .discussion-timeline {
         width: 1460px !important;
     }
